<resources>
    <string name="app_name">爱记账</string>
    <string name="month">月份</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="balance">结余</string>
    <string name="amount">金额</string>
    <string name="tab_mine">我的</string>
    <string name="tab_chart">图表</string>
    <string name="tab_invest">投资</string>
    <string name="tab_detail">明细</string>
    <string name="text_exit">再按一次退出程序</string>
    <string name="text_register">注册</string>
    <string name="noti">亲，该记账了~~</string>
    <string name="author_email">isuperqiang@gmail.com</string>
    <string name="source_address">https://github.com/isuperqiang/Account</string>
    <string name="author_wechat">1328063816</string>
    <string name="hint_wechat">微信号</string>
    <string name="hint_email">反馈邮箱</string>
    <string name="hint_address">开源地址</string>
    <string name="about_us">关于我们</string>
    <string name="add_category">添加类别</string>
    <string name="modify_category">修改类别</string>
    <string name="modify_succeed">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="save_succeed">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="input_category_name">请填写类别名称</string>
    <string name="find_password">找回密码</string>
    <string name="reset_pass_fail">重置密码失败</string>
    <string name="unregister_email">该邮箱未注册</string>
    <string name="check_net_connect">请检查网路是否连接</string>
    <string name="input_right_email">请输入正确的邮箱号码</string>
    <string name="input_email">请输入邮箱号码</string>
    <string name="add_succeed">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="input_rate">请输入利率</string>
    <string name="input_duration">请输入期限</string>
    <string name="lack_amount">结余金额不足</string>
    <string name="input_amount">请输入金额</string>
    <string name="record_invest">记录投资</string>
    <string name="current_month">本月</string>
    <string name="today">今天</string>
    <string name="current_week">本周</string>
    <string name="input_user">请输入用户名和密码</string>
    <string name="error_user_login">用户不存在或密码错误</string>
    <string name="edit_name">编辑昵称</string>
    <string name="input_username">请填写用户名</string>
    <string name="query_fail">查询失败</string>
    <string name="update_user_fail">更新用户名失败</string>
    <string name="update_user_succeed">更新用户名成功</string>
    <string name="user_exist">用户名已存在</string>
    <string name="modify_password">修改密码</string>
    <string name="record_accout">记账</string>
    <string name="verify_fail">验证失败</string>
    <string name="regiter_succeed">注册成功</string>
    <string name="input_full_info">请填写完整信息</string>
    <string name="username_exist">该用户名已被占用</string>
    <string name="email_exist">该邮箱已注册</string>
    <string name="person_info">我的资料</string>
    <string name="upload_fail">头像上传失败</string>
    <string name="upload_succeed">头像修改成功</string>
    <string-array name="type_invest">
        <item>定期存款</item>
        <item>活期存款</item>
        <item>基金</item>
        <item>保险</item>
        <item>股票</item>
    </string-array>
</resources>
